Update LineResult.java